<resources>
    <string name="app_name">Foodship</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="welcome_headline">Welcome</string>
    <string name="welcome_text">Thanks for giving our App a try! To find a dinner in your neighborhood, we have to do a little setup. What\'s your first name?</string>
    <string name="pick_location">Pick Home Location</string>
    <string name="add_firstname">Next</string>
    <string name="error_set_location">Error while sending location to Server</string>
    <string name="try_again">Try again!</string>
    <string name="nav_groceries">Overview</string>
    <string name="nav_dev">Developer Settings</string>
    <string name="nav_contact">Contact</string>

    <string name="contact_title">Contact</string>
    <string name="contact_text"><![CDATA[Foodship is made by Hannes Hilbert & Sönke Huster]]></string>
    <string name="contact_title_icons">Icons</string>
    <string name="contact_text_icons">Icons made by <a href="http://www.flaticon.com/authors/madebyoliver" title="Madebyoliver">Madebyoliver</a> from <a href="http://www.flaticon.com">flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></string>

    <string name="reset_location">Reset Location</string>

    <string name="unknown_food_dialog_title">Add Food</string>
    <string name="alert_dialog_ok">Add</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="set_food_type">This Product is unknown yet, please enter the type!</string>
    <string name="set_food_type2">Currently no InternetConnection! please enter the type of the Product.</string>
    <string name="not_yet_btn">Not yet</string>
    <string name="name">Name</string>
    <string name="thanks_name">Thanks %1$s! Now you just have to add your home location</string>
    <string name="hello_x">Welcome %1$s</string>
    <string name="invalidType">Unknown Food Type</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="triggerNotif">Trigger Notification</string>
    <string name="nav_group">Group</string>
    <string name="accept_Invitation">Yes</string>
    <string name="disline_Invation">No</string>
    <string name="empty_products">Your fridge is empty! Start by adding products</string>
    <string name="invitationsTitle">%1$d Invitations</string>
    <string name="invitationsBody">%1$d accepted, %2$d open</string>
    <string name="dinnerTitle">Dinner on %1$tA</string>
    <string name="recipesTitle">Recipes</string>
    <string name="group_symbol">Group Symbol</string>
</resources>