<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="de.foodshippers.foodship.ContactFragment"
             style="@style/AppLayout"
        android:orientation="vertical">


    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_title"
            style="@style/TextAppearance.AppCompat.Headline"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_text"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_title_icons"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_marginTop="@dimen/activity_vertical_margin"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/contact_text_icons"
            android:text="@string/contact_text_icons"/>
</LinearLayout>
