<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".InitialSetupFragment"
              android:orientation="vertical"
              android:theme="@style/AppLayout">
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_headline"
            style="@style/TextAppearance.AppCompat.Headline"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_text"
            style="@style/TextAppearance.AppCompat.Body1"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/name"
            android:ems="10"
            android:id="@+id/nameEditText"
            android:selectAllOnFocus="false"
            android:maxLines="1"/>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_firstname"
            android:id="@+id/initialSetupConfirmBtn"
            style="@style/Widget.AppCompat.Button"
            android:layout_gravity="center_horizontal"
            android:clickable="false"
            android:elevation="0dp"
            android:enabled="false"/>
</LinearLayout>
