<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                              android:layout_width="match_parent"
                                              android:layout_height="match_parent"
                                              android:id="@+id/swiperefresh">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:tools="http://schemas.android.com/tools"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical"
                  android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
            android:id="@+id/dinnerDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dinnerTitle"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"/>

        <TextView
                android:id="@+id/invitationsInfoHeadline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/invitationsTitle"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:drawableLeft="@drawable/ic_group_black_24dp"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                />

    <TextView
            android:id="@+id/invitationsInfoBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/invitationsBody"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recipesTitle"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:id="@+id/recipeText"/>

    <android.support.v7.widget.RecyclerView
            android:id="@+id/recipeList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            tools:listitem="@layout/recipe_item"/>
</LinearLayout>
</android.support.v4.widget.SwipeRefreshLayout>
